# bevy_tileset

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
assets/tiles/: dirt.ron  empty.ron  flower.ron  glass.ron  grass.ron  wall.ron
assets/tilesets/: my_tileset.ron
bevy_ecs_tilemap_tileset/: Cargo.toml  README.md
bevy_ecs_tilemap_tileset/assets/: map.json
bevy_ecs_tilemap_tileset/assets/tilesets/: my_tileset.ron
bevy_ecs_tilemap_tileset/examples/: clickable.rs  drag.rs  serialization.rs
bevy_ecs_tilemap_tileset/examples/helpers/: build_map.rs  camera.rs  input.rs  mod.rs
bevy_ecs_tilemap_tileset/src/: lib.rs  placement.rs  plugin.rs  serialization.rs
bevy_ecs_tilemap_tileset/src/auto/: auto_tiler.rs  mod.rs  systems.rs  traits.rs
bevy_ecs_tileset_tiles/: Cargo.toml
bevy_ecs_tileset_tiles/src/: tile.rs
bevy_ecs_tileset_tiles/src/auto/: rules.rs
bevy_tileset_core/: Cargo.toml
bevy_tileset_core/src/: coords.rs  debug.rs  ids.rs  lib.rs  plugin.rs
bevy_tileset_core/src/auto/: auto_tiler.rs  mod.rs  traits.rs
bevy_tileset_core/src/tileset/: asset.rs  builder.rs  error.rs  load.rs  mod.rs  param.rs  tile_index.rs
bevy_tileset_core/src/tileset/impls/: auto.rs  mod.rs  variants.rs
bevy_tileset_map/: Cargo.toml  README.md
bevy_tileset_map/assets/tilesets/: my_tileset.ron
bevy_tileset_map/examples/: clickable.rs  drag.rs  serialization.rs
bevy_tileset_map/examples/helpers/: build_map.rs  input.rs  mod.rs  textures.rs
bevy_tileset_map/src/: lib.rs  placement.rs
bevy_tileset_map/src/auto/: mod.rs  systems.rs  traits.rs
bevy_tileset_tiles/: Cargo.toml
bevy_tileset_tiles/src/: animated.rs  lib.rs  tile.rs  variants.rs
bevy_tileset_tiles/src/auto/: mod.rs  rules.rs
examples/: clickable.rs  dynamic.rs  tileset.rs
examples/helpers/: build_map.rs  input.rs
src/: auto_tile.rs  data.rs  debug.rs  definitions.rs  handles.rs  ids.rs  lib.rs  loader.rs  plugin.rs  tileset.rs
src/auto/: auto_tiler.rs  mod.rs  systems.rs  traits.rs
src/plugin/: loader.rs  mod.rs  tileset_plugin.rs
src/tiles/: auto_tile.rs  data.rs  definitions.rs  mod.rs
src/tileset/: asset.rs  builder.rs  error.rs  load.rs  mod.rs  param.rs  raw.rs  serialization.rs  tile_index.rs  tileset.rs  tilesets.rs
src/tileset/impls/: auto.rs  mod.rs  placement.rs  variants.rs
