[package]
name = "bevy_tileset"
version = "0.2.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Simple, configurable tilesets in Bevy using RON"
repository = "https://github.com/MrGVSV/bevy_tileset"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "tileset", "auto", "variant", "tile"]
categories = ["game-development"]
readme = "README.md"
exclude = ["assets/**/*", ".github/**/*", "screenshots/**/*"]

[workspace]
members = ["bevy_tileset_tiles", "bevy_ecs_tilemap_tileset"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bevy_tileset_tiles = { path = "./bevy_tileset_tiles" }
bevy = "0.5"
bevy_tile_atlas = "0.1.3"
ron = "0.7.0"
serde = "1.0.130"
anyhow = "1.0.52"
thiserror = "1.0.30"
futures = "0.3.19"
rand = { version = "0.8", optional = true }

[features]
default = ["variants"]
variants = ["rand", "bevy_tileset_tiles/variants"]
auto-tile = ["variants", "bevy_tileset_tiles/auto-tile"]