[package]
name = "bevy_tileset"
version = "0.2.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Simple, configurable tilesets in Bevy using RON"
repository = "https://github.com/MrGVSV/bevy_tileset"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "tileset", "auto", "variant", "tile"]
categories = ["game-development"]
readme = "README.md"
exclude = ["assets/**/*", ".github/**/*", "screenshots/**/*"]

[workspace]
members = ["bevy_tileset_core", "bevy_tileset_tiles", "bevy_ecs_tilemap_tileset"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bevy_tileset_tiles = { path = "./bevy_tileset_tiles", version = "0.2" }
bevy_tileset_core = { path = "./bevy_tileset_core", version = "0.2" }

[dev-dependencies]
bevy = "0.5"
ron = "0.7"

[features]
default = []
variants = ["bevy_tileset_core/variants"]
auto-tile = ["variants", "bevy_tileset_core/auto-tile"]