[package]
name = "bevy_tileset_map"
version = "0.3.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "An extension to bevy_ecs_tilemap, allowing for configurable tilesets, auto tiling, and more"
repository = "https://github.com/MrGVSV/bevy_tileset"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "tileset", "auto", "variant", "tile"]
categories = ["game-development"]
readme = "README.md"
exclude = ["assets/**/*", ".github/**/*", "screenshots/**/*"]

[dependencies]
bevy_tileset = { path = "..", version = "0.3" }
bevy = { version = "0.6", default-features = false }
bevy_ecs_tilemap = "0.5"
serde = { version = "1.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
variants = ["bevy_tileset/variants"]
auto-tile = ["variants", "bevy_tileset/auto-tile"]
serialization = ["serde"]

[[example]]
name = "clickable"
path = "examples/clickable.rs"
required-features = ["auto-tile", "bevy/default", "serialization"]

[[example]]
name = "serialization"
path = "examples/serialization.rs"
required-features = ["auto-tile", "bevy/default", "serialization"]

[[example]]
name = "drag"
path = "examples/drag.rs"
required-features = ["auto-tile", "bevy/default"]