[package]
name = "bevy_tileset_tiles"
version = "0.7.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Tile definitions used by bevy_tileset"
repository = "https://github.com/MrGVSV/bevy_tileset"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "tileset", "auto", "variant", "tile"]
categories = ["game-development"]
readme = "../README.md"
exclude = ["assets/**/*", ".github/**/*", "screenshots/**/*"]

[dependencies]
bevy_render = { version = "0.10", default-features = false }
bevy_asset = { version = "0.10", default-features = false }
serde = "1.0"

[features]
default = []
variants = []
auto-tile = ["variants"]
